fix(report article): implement feedback from the reviews
